[metadata]
name = reprojectgeometry
author = Zach Burnett
author_email = zachary.burnett@noaa.gov
description = reproject Shapely geometry
long_description = file: README.md
license = CC0
url = https://github.com/zacharyburnettNOAA/ReprojectGeometry.git

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
